@@ -63,6 +63,7 @@
     </table>
     <%= button_tag image_tag('gentleface/16/cog.png') + 'Filter Search' %>
     <%= link_to_function image_tag('gentleface/16/doc_lines_stright.png') + 'Export CSV', "window.location = $('#stickies_search').attr('action') + '.csv?' + $('#stickies_search').serialize();", class: 'button' %>
+    <%= link_to_function image_tag('gentleface/16/calendar_2.png') + 'Export Calendar', "window.location = $('#stickies_search').attr('action') + '.ics?' + $('#stickies_search').serialize();", class: 'button' %>
   </fieldset>
 <% end %>
 
